--- a/Base.html
+++ b/Base.html
@@ -9,8 +9,8 @@
 
         <!-- Search Meta -->
         <meta name="author" content="Allunn">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+        <meta name="description" content="">  <!-- Delete if not used-->
+        <meta name="keywords" content=""> <!-- Delete if not used-->
 
         <!-- Title & Apparence -->
         <title></title>
